# axum-with-prost

./: .gitignore  Cargo.toml  README.md  build.rs  seed.rs  sort.rs
.cargo/: config.toml
html/: book.proto  index.html  script.js
src/: api.rs  main.rs  proto.rs
