[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
indexmap = { version = "2.1.0", features = ["rayon"] }
prost = "0.12.3"
serde = { version = "1.0.193", features = ["derive"] }
time = { version = "0.3.30", features = ["macros"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "normalize-path"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }

[build-dependencies]
prost-build = "0.12.3"

[[bin]]
name = "seed"
path = "./seed.rs"

[[bin]]
name = "sort"
path = "./sort.rs"
